plugins {
    id 'com.gradleup.shadow' version '9.0.0-beta13'
    id 'java-library'
    id 'java-gradle-plugin'
    id 'maven-publish'
}

group 'com.ancientmc'
version '0.4.0.B5'

java {
    withSourcesJar()
    withJavadocJar()
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.neoforged.net/' }
}

sourceSets {
    acp
}

configurations {
    acpImplementation
    implementation.extendsFrom acpImplementation
    testImplementation.extendsFrom acpImplementation
}

dependencies {
    acpImplementation gradleApi()
    acpImplementation libs.commons.compress
    acpImplementation libs.commons.io
    acpImplementation libs.gson
    acpImplementation libs.srgutils

    testImplementation gradleTestKit()
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

gradlePlugin {
    website = 'https://github.com/ancientmc/acp-gradle'
    vcsUrl = 'https://github.com/ancientmc/acp-gradle'
    plugins.register('acp') {
        id = 'com.ancientmc.acp'
        displayName = project.name
        description = 'Gradle plugin for Ancient Coder Pack (ACP) processes.'
        implementationClass = 'com.ancientmc.acp.AcpPlugin'
    }
}

javadoc {
    source = sourceSets.acp.allJava
    destinationDir = project.file('build/docs/')
}

def meta = [
        'Specification-Title': project.name,
        'Specification-Vendor': 'AncientMC',
        'Specification-Version': project.version,
        'Implementation-Title': 'com.ancientmc:acp-gradle',
        'Implementation-Vendor': 'AncientMC',
        'Implementation-Version': project.version
]

jar {
    from sourceSets.acp.output
    manifest { attributes (meta) }
}

shadowJar {
    archiveFileName = 'acp.jar'
    from sourceSets.acp.output
    manifest { attributes (meta) }
    destinationDirectory = file('acp_test/plugin/')
}

sourcesJar {
    from sourceSets.acp.allSource
}

javadocJar {
    from javadoc.destinationDir
}

test {
    dependsOn shadowJar
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    testLogging {
        showExceptions true
        exceptionFormat 'full'
        showCauses true
        showStackTraces true
    }
}

publishing {
    publications.register('pluginMaven', MavenPublication) {
        groupId = project.group
        artifactId = project.name
        version = project.version
        pom {
            name = artifactId
            description = 'Gradle plugin for Ancient Coder Pack (ACP) processes.'
            url = 'https://github.com/ancientmc/acp-gradle'
            licenses {
                license {
                    name = 'AncientMC License'
                    url = 'https://raw.githubusercontent.com/ancientmc/license/refs/heads/master/LICENSE'
                }
            }
            developers {
                developer {
                    id = 'moist-mason'
                    name = 'Mason'
                    url = 'https//github.com/moist-mason/'
                }
            }
        }
    }
    repositories {
        maven {
            name = 'ancientmc-maven'
            url = '../ancientmc-maven/'
        }
    }
}